[package]
name = "widevine_gadget"
version = "0.1.0"
build = "build.rs"

[lib]
name = "widevine_gadget"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
proc-maps = "0.2.0"
goblin = "0.4.3"
capstone = "0.10.0"
read-process-memory = "=0.1.3"
hexdump = "0.1.1"
libc = "0.2.112"

[build-dependencies]
cc = "1.0"